--- a/Blik Mac/GLACollectedFolderContentsViewController.xib
+++ b/Blik Mac/GLACollectedFolderContentsViewController.xib
@@ -14,11 +14,11 @@
         <customObject id="-1" userLabel="First Responder" customClass="FirstResponder"/>
         <customObject id="-3" userLabel="Application" customClass="NSObject"/>
         <customView id="Hz6-mo-xeY">
-            <rect key="frame" x="0.0" y="0.0" width="480" height="272"/>
+            <rect key="frame" x="0.0" y="0.0" width="496" height="272"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
             <subviews>
                 <scrollView borderType="none" autohidesScrollers="YES" horizontalLineScroll="22" horizontalPageScroll="10" verticalLineScroll="22" verticalPageScroll="10" usesPredominantAxisScrolling="NO" translatesAutoresizingMaskIntoConstraints="NO" id="vvY-k9-h2r">
-                    <rect key="frame" x="0.0" y="0.0" width="480" height="272"/>
+                    <rect key="frame" x="0.0" y="0.0" width="496" height="272"/>
                     <clipView key="contentView" id="t3q-Q3-65V">
                         <rect key="frame" x="1" y="17" width="238" height="117"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -30,7 +30,7 @@
                                 <color key="backgroundColor" name="controlBackgroundColor" catalog="System" colorSpace="catalog"/>
                                 <color key="gridColor" name="gridColor" catalog="System" colorSpace="catalog"/>
                                 <tableColumns>
-                                    <tableColumn identifier="displayNameAndIcon" width="255.4375" minWidth="40" maxWidth="1000" id="cpg-cE-Co1">
+                                    <tableColumn identifier="displayNameAndIcon" width="271.4375" minWidth="40" maxWidth="1000" id="cpg-cE-Co1">
                                         <tableHeaderCell key="headerCell" lineBreakMode="truncatingTail" borderStyle="border" alignment="left" title="Name">
                                             <font key="font" metaFont="smallSystem"/>
                                             <color key="textColor" name="headerTextColor" catalog="System" colorSpace="catalog"/>
@@ -44,7 +44,7 @@
                                         <tableColumnResizingMask key="resizingMask" resizeWithTable="YES" userResizable="YES"/>
                                         <prototypeCellViews>
                                             <tableCellView id="KmG-h0-IRp">
-                                                <rect key="frame" x="1" y="1" width="255" height="20"/>
+                                                <rect key="frame" x="1" y="1" width="271.5" height="20"/>
                                                 <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                                                 <subviews>
                                                     <imageView horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="Z2d-Zc-EPR">
@@ -77,7 +77,7 @@
                                                 </connections>
                                             </tableCellView>
                                             <customView identifier="NSTableViewRowViewKey" id="Bkr-c2-OPd" customClass="GLATableContentRowView">
-                                                <rect key="frame" x="1" y="23" width="255" height="39"/>
+                                                <rect key="frame" x="1" y="23" width="271.5" height="39"/>
                                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
                                             </customView>
                                         </prototypeCellViews>
@@ -96,11 +96,11 @@
                                         <tableColumnResizingMask key="resizingMask" resizeWithTable="YES" userResizable="YES"/>
                                         <prototypeCellViews>
                                             <tableCellView id="O3p-KI-ntD">
-                                                <rect key="frame" x="259.5" y="1" width="218" height="20"/>
+                                                <rect key="frame" x="275.5" y="1" width="218.5" height="20"/>
                                                 <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                                                 <subviews>
                                                     <textField verticalHuggingPriority="750" horizontalCompressionResistancePriority="250" translatesAutoresizingMaskIntoConstraints="NO" id="paj-wf-a57">
-                                                        <rect key="frame" x="6" y="-2" width="194" height="23"/>
+                                                        <rect key="frame" x="6" y="-2" width="193.5" height="23"/>
                                                         <textFieldCell key="cell" lineBreakMode="truncatingTail" sendsActionOnEndEditing="YES" title="Table View Cell" id="PV9-em-I12">
                                                             <font key="font" size="13" name="AvenirNext-Medium"/>
                                                             <color key="textColor" name="controlTextColor" catalog="System" colorSpace="catalog"/>
@@ -140,7 +140,7 @@
             </subviews>
             <constraints>
                 <constraint firstAttribute="bottom" secondItem="vvY-k9-h2r" secondAttribute="bottom" id="4GG-RC-DK7"/>
-                <constraint firstItem="vvY-k9-h2r" firstAttribute="top" secondItem="Hz6-mo-xeY" secondAttribute="top" id="8DT-yv-n6c"/>
+                <constraint firstItem="vvY-k9-h2r" firstAttribute="top" secondItem="Hz6-mo-xeY" secondAttribute="top" id="Bg9-0P-aHV"/>
                 <constraint firstAttribute="trailing" secondItem="vvY-k9-h2r" secondAttribute="trailing" id="KT0-Q5-Sv9"/>
                 <constraint firstItem="vvY-k9-h2r" firstAttribute="leading" secondItem="Hz6-mo-xeY" secondAttribute="leading" id="cAq-J4-xmQ"/>
             </constraints>
